--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ branches:
   only:
   - master
 before_install:
-- sudo apt install libjpeg-turbo8-dev libtclap-dev libx11-dev
+- sudo apt-get install libjpeg-turbo8-dev libtclap-dev libx11-dev
 before_script:
 - mkdir build
 - cd build
